# claude-pager

./: .gitignore  README.md  TODO.md  install.sh  pyproject.toml
benchmarks/: 2026-02-20-ctrl-g-automated.md  2026-02-20-ctrl-g-latency.md  FINDINGS.md  V2_REGRESSION_PLAN.md  bench_ctrl_g.py
shim/: claude-pager-shim.sh  pager-setup.sh  queue-drain-stop.sh  save-session-transcript.sh
src/claude_pager/: __init__.py  __main__.py  pager.py  parser.py  renderer.py  terminal.py  viewport.py
tests/: test_pager.py  test_parser.py  test_renderer.py  test_terminal.py  test_viewport.py
tests/fixtures/: malicious.jsonl  sample.jsonl  sample_with_usage.jsonl
