[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-pager"
version = "0.1.0"
description = "Scrollable pager for Claude Code session transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "aaaaa" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.optional-dependencies]
highlighting = ["pygments>=2.0"]

[project.scripts]
claude-pager = "claude_pager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_pager"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.9"
